<resources>
    <string name="app_name">Quadcopter controller</string>
	<string name="status">Status: ?1 | Battery: ?2% | Signal: ?3db</string>
	<string name="z_label">Z</string>
	<string name="y_label">Y</string>
	<string name="x_label">X</string>
	<string name="rotate_label">Rotate</string>
	<string name="quad_disconnected">Quadcopter disconnected, trying connect&#8230;</string>
	<string name="turn_on">Turn on</string>
	<string name="turn_off">Turn off</string>
	<string name="cube_menu">Cube(debug gyro and accelerometer)</string>
	<string name="settings">Settings</string>
	<string name="pid_p_label">PID P value:</string>
	<string name="pid_i_label">PID I value:</string>
	<string name="save">Save and exit</string>
	<string name="front_left">Front left</string>
	<string name="front_right">Front right</string>
	<string name="back_left">Back left</string>
	<string name="back_right">Back right</string>
	<string name="value">Value:</string>
	<string name="esc_menu">Esc configuration</string>
	<string name="arm">Arm</string>
	<string name="send">Send</string>
</resources>