<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:text="@string/status"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/rotate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/status">
        
        <TextView
            android:id="@+id/rotate_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/rotate_label" />

        <SeekBar
            android:id="@+id/seek_bar_rotate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:progress="1" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/axis_x"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/x_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/x_label" />
        <SeekBar
            android:id="@+id/seek_bar_axis_x"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="6"
            android:progress="3"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/axis_z"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rotate"
        android:layout_above="@+id/axis_x"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/z_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/z_label" />

        <!-- android:maxHeight="1000dp" is a hack to centralize thumb -->
        <org.quadcopter.controller.view.util.VerticalSeekBar
            android:id="@+id/seek_bar_axis_z"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="1000"
            android:maxHeight="1000dp" />        
    </LinearLayout>
       
    <LinearLayout
        android:id="@+id/axis_y"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rotate"
        android:layout_above="@+id/axis_x"
        android:orientation="vertical"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/y_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/y_label" />

        <!-- android:maxHeight="1000dp" is a hack to centralize thumb -->
        <org.quadcopter.controller.view.util.VerticalSeekBar
            android:id="@+id/seek_bar_axis_y"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="6"
            android:progress="3"
            android:maxHeight="1000dp" />        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/turn_on_off"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/axis_x"
        android:layout_toRightOf="@+id/axis_z"
        android:layout_toLeftOf="@+id/axis_y"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_turn_on_off"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_on" />
        <Button
            android:id="@+id/btn_arm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/arm" />
    </LinearLayout>
</RelativeLayout>